# voxelphile

./: .gitignore  Cargo.toml  Dockerfile  build.rs  cloudbuild.yaml  package-lock.json  package.json  svelte.config.js
assets/: blur.comp.spirv  composite.comp.spirv  postfx.comp.spirv  uber.frag.spirv  uber.vert.spirv
assets/sql/: setup.sql  user_password_logins.sql  users.sql
src/: app.postcss  const.js  form.postcss  hooks.server  infra.rs  input.rs  lib.rs  login-register.postcss  main.rs  sol.rs  user-form.js  user.rs
src/graphics/: boson.rs  mod.rs  vertex.rs  vulkan.rs
src/graphics/boson/: atlas.rs  blur.glsl  buffer.rs  composite.glsl  indirect.rs  mod.rs  pool.rs  postfx.glsl  uber.glsl
src/net/: mod.rs
src/net/udp/: mod.rs
src/routes/: +error.svelte  +layout.server.js  +layout.svelte  +page.svelte  root.postcss
src/routes/about/: +page.svelte
src/routes/dashboard/: +layout.server.js  +layout.svelte  +page.js  +page.svelte  dashboard.postcss  home.postcss  store.js
src/routes/dashboard/settings/: +page.js  +page.server.js  +page.svelte  settings.postcss
src/routes/login/: +page.server.js  +page.svelte  login.postcss
src/routes/register/: +page.server.js  +page.svelte
src/routes/user/: +layout.server.js  +layout.svelte  login-register.postcss  store.js
src/routes/user/join/: +page.svelte
src/routes/user/login/: +page.server.js  +page.svelte
src/routes/user/logout/: +page.server.js  +page.svelte
src/routes/user/register/: +page.server.js  +page.svelte
src/routes/voxelphile-plus/: +page.svelte  voxelphile-plus.postcss
src/util/: rle.rs
src/window/: mod.rs  windows.rs
src/world/: block.rs  dimension.rs  entity.rs  mod.rs  raycast.rs  structure.rs
static/: hamburger.ase
