[package]
name = "xenotech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["boson"]
boson = ["dep:boson"]

[build-dependencies]
shaderc = "*"

[dependencies]
boson = { path = "../boson", optional = true }
winit = "*"
raw-window-handle = "*"
nalgebra = "*"
strum = "*"
strum_macros = "*"
crossbeam = "*"
rand = "*"
noise = "*"
lerp = "*"
image = "*"
band = { path = "../band" }