[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
common = { path = "../common" }
http = "*"
argon2 = "*"
lazy_static = "*"
tokio-postgres = "*"
serde_derive = "*"
uuid = { version = "*", features = ["v4"] }
base64 = "0.21.4"
jwt = "0.16.0"
hmac = "*"
sha2 = "*"
async-trait = "*"