[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
axum-macros = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_bytes = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
http = "*"
argon2 = "*"
lazy_static = "*"
tokio-postgres = "*"
serde_derive = "*"
uuid = { version = "*", features = ["v4"] }
base64 = "0.21.4"
jwt = "0.16.0"
hmac = "*"
sha2 = { version = "*" }
async-trait = "*"
image = "*"
image-base64 = "*"
reqwest = { version = "*", features = ["stream", "json"] }
jsonwebtoken = "*"